# kns-inscribe

./: .env.example  .gitignore  Cargo.toml  README.md  SKILL.md  install.ps1  install.sh
.github/workflows/: build-binaries.yml
src/: config.rs  inscribe.rs  main.rs  pskt.rs  tx_common.rs
src/operations/: create.rs  create_asset.rs  list.rs  mod.rs  profile.rs  send.rs  transfer.rs
